- Profile request also using queue. - Show error. - Clear state on button press. - Regex global flag removed.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <br/> <br/> <br/>
     </div>
     <div>
+        <span id="error"></span>
+    </div>
+    <div>
         <div class="card-profile">
             <div class="profile-ava">
                 <img id="profile-ava" src="">
