support-card-appear-fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     document.getElementById('go_go_go').onclick = onClicked;
 </script>
-<div class="block-info">
+<div class="block-info" style="transform: translateY(-200px);">
     <div class="block-info-main">
         <div>
             Вся эта шляпа доступна на <a href="https://github.com/Suvitruf/cmtt-comments-likes-stats" target="_blank">Гитхабе</a>.
