index.html, public/images/ava_palceholder.png: 	Added placeholder for the avatar while it's not loaded.
src/main.js:
	Changed regex so now it valid only on dtf.ru/tjournal.ru/vc.ru domains and insensitive to protocol;
	Changed API version to 1.9 from 1.8;
	Hid excessive countdown on the first stage of comments loading, it was causing overlapping of text on the card-profile element on the screen bigger then 900px.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="top-cards-container">
         <div class="card-profile">
             <div class="profile-ava">
-                <img id="profile-ava" src="">
+                <img id="profile-ava" src="public/images/ava_palceholder.png">
             </div>
             <div class="profile-info">
                 <a id="profile-name">
