--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Статистика лайков на сайте Комитета</title>
     <script src="src/queue.js" type="module"></script>
     <script src="src/main.js" type="module"></script>
-    <script src="src/interactions.js" type="module"></script>
-    <link href="public/css/hehe.css" rel="stylesheet" type="text/css">
+    <link href="public/css/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="description" content="Статистика лайков на комментариях выбранного участника"/>
     <meta name="keywords" content="dtf,комитет,статистика,лайки"/>
     <link rel="canonical" href="https://suvitruf.ru/cmtt/comments-likes-stats/"/>
@@ -29,98 +27,84 @@
         onClicked();
     }
 
-    document.getElementById('go_go_go').onclick = onStart;
-    document.getElementById('user_url').addEventListener('keyup', function (event) {
+    document.getElementById('search-button').onclick = onStart;
+    document.getElementById('search-input').addEventListener('keyup', function (event) {
         if (event.key === 'Enter') {
             event.preventDefault();
             onStart();
         }
     });
 </script>
-<div class="block-info" style="transform: translateY(-200px);">
-    <div class="block-info-main">
-        <div>
-            Вся эта шляпа доступна на <a href="https://github.com/Suvitruf/cmtt-comments-likes-stats" target="_blank">Гитхабе</a>.
+<main>
+    <header>
+        <h1 id="logo">KarmaScan</h1>
+        <div id="search">
+            <label for="user_url" id="search-label">Ссылка на профиль:</label>
+            <input id="search-input" name="user_url" type="text">
+            <input type="button" value="Scan" id="search-button">
         </div>
-        <div>
-            Поддержать подобные проекты и выход статей можно одним из способов:
-            <ul>
-                <li><a href="https://www.patreon.com/suvitruf" target="_blank">На Патреоне</a>.</li>
-                <li><a href="https://www.paypal.com/paypalme/suvitruf" target="_blank">Напрямую на Paypal</a>.</li>
-                <li><a href="https://yoomoney.ru/to/41001674710054" target="_blank">Через Яндекс.Деньги</a>.</li>
-            </ul>
+        <div id="urls">
+        <a class="url-image" target="_blank" href="https://github.com/Suvitruf/cmtt-comments-likes-stats"><img src="public/images/GitHub-Mark-Light-32px.png" alt="github icon"></a>
+        <a class="url-image" target="_blank" href="https://www.patreon.com/suvitruf"><img src="public/images/Patreon_rs.png" alt="patreon icon"></a>
+        <a class="url-image" id="paypal-logo" target="_blank" href="https://www.paypal.com/paypalme/suvitruf" ><img src="public/images/Paypal_rs.png" alt="paypal icon" ></a>
+        <a class="url-image" target="_blank" href="https://yoomoney.ru/to/41001674710054"><img src="public/images/io_rs.png" alt="yumani icon" ></a>
         </div>
-    </div>
-    <div class="toggle-show-info" id="toggle-show-info">
-        <p class="toggle-show-text">
-            Поддержать
-        </p>
-    </div>
-</div>
-<div class="content">
-    <div class="input-container">
-        <label for="user_url">
-            <span>Ссылка на профиль:</span>
-            <div class="type-container">
-                <input id="user_url" name="user_url" type="text">
-                <input type="button" value="Go" id="go_go_go">
-            </div>
-        </label>
-    </div>
-    <div>
-        <span id="error"></span>
-    </div>
-    <div class="top-cards-container">
-        <div class="card-profile">
-            <div class="profile-ava">
-                <img id="profile-ava" src="public/images/ava_palceholder.png">
-            </div>
-            <div class="profile-info">
-                <a id="profile-name">
-
-                </a>
-                <div id="profile-karma">
-
+    </header>
+    <section id="cards">
+        <div class="card" id="card-profile">
+                <div class="profile-ava">
+                    <img id="profile-ava" src="public/images/ava_palceholder.png">
                 </div>
-                <div id="profile-posts">
+                <div class="profile-info">
+                    <a id="profile-name" class="profile-datum">
 
-                </div>
-                <div id="profile-comments">
+                    </a>
+                    <div id="profile-karma" class="profile-datum ">
 
+                    </div>
+                    <div id="profile-posts" class="profile-datum">
+
+                    </div>
+                    <div id="profile-comments" class="profile-datum">
+                        <div id="total-comments">
+
+                        </div>
+                        <div id="parsed-comments">
+
+                        </div>
+                    </div>
                 </div>
-            </div>
         </div>
-        <div class="card-progress">
+
+
+        <div class="card" id="card-progress">
+            <div class="card-bar">
             <div class="card-comments-container">
                 <div class="card-comments-progress-counted-block">
-                    <div class="stat-label">Обработано</div>
-                    <div id="card-comments-progress-counted">0</div>
-                </div>
-                <div class="card-comments-progress-total-block">
                     <div class="stat-label">Всего</div>
                     <div id="card-comments-progress-total">0</div>
+                </div>
+                <div class="card-comments-progress-total-block">
+                    <div class="stat-label">Обработано</div>
+                    <div id="card-comments-progress-counted">0</div>
                 </div>
                 <div class="card-comments-progress-time-block">
                     <div class="stat-label">Осталось</div>
                     <div id="card-comments-progress-time">🤔</div>
                 </div>
             </div>
-            <div>
-                <div class="card-comments-progress-bar-bg">
-                    <div id="card-comments-progress-bar">
-
-                    </div>
-                </div>
+            <div class="card-comments-progress-bar-bg">
+                <div id="card-comments-progress-bar"></div>
             </div>
-        </div>
-        <div class="card-stat">
+            </div>
+            <div class="card-bar">
             <div class="card-likes-container">
                 <div class="card-likes-progress-likes-block">
-                    <div class="stat-label">Лайков</div>
+                    <div class="stat-label">Плюсов</div>
                     <div id="card-likes-progress-likes">0</div>
                 </div>
                 <div class="card-likes-progress-dislikes-block">
-                    <div class="stat-label">Дизлайков</div>
+                    <div class="stat-label">Минусов</div>
                     <div id="card-likes-progress-dislikes">0</div>
                 </div>
                 <div class="card-likes-progress-total-block">
@@ -128,25 +112,27 @@
                     <div id="card-likes-progress-total">0</div>
                 </div>
             </div>
-            <div>
-                <div class="card-likes-progress-bar-bg">
-                    <div id="card-likes-progress-bar">
-
-                    </div>
-                </div>
+            <div class="card-likes-progress-bar-bg">
+                <div id="card-likes-progress-bar"></div>
+            </div>
             </div>
         </div>
-    </div>
-    <div class="block-stats">
-        <div class="block-likers">
-            <div class="title">Топ котят 😊</div>
-            <div id="block-likers"></div>
+    </section>
+    <section id="blocks">
+        <div class="block-likers block">
+            <header class="block-header">
+                Топ котят 😊
+            </header>
+            <div id="likers-list"></div>
+            </div>
+        <div class="block-dislikers block">
+            <header class="block-header">
+                Топ хейтеров 😞
+            </header>
+            <div id="dislikers-list">
+            </div>
         </div>
-        <div class="block-dislikers">
-            <div class="title">Топ хейтеров 😞</div>
-            <div id="block-dislikers"></div>
-        </div>
-    </div>
-</div>
+    </section>
+</main>
 </body>
 </html>
