added: error block, metrika; css fixed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         <a class="url-image" id="paypal-logo" target="_blank" href="https://www.paypal.com/paypalme/suvitruf" ><img src="public/images/Paypal_rs.png" alt="paypal icon" ></a>
         <a class="url-image" target="_blank" href="https://yoomoney.ru/to/41001674710054"><img src="public/images/io_rs.png" alt="yumani icon" ></a>
         </div>
+        
     </header>
+    <div>
+        <span id="error"></span>
+    </div>
     <section id="cards">
         <div class="card" id="card-profile">
                 <div class="profile-ava">
@@ -134,5 +138,28 @@
         </div>
     </section>
 </main>
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+        m[i]   = m[i] || function () {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        m[i].l = 1 * new Date();
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
+
+    ym(7621741, 'init', {
+        clickmap:            true,
+        trackLinks:          true,
+        accurateTrackBounce: true
+    });
+</script>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/7621741" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
+
 </body>
 </html>
