added: metrica, error block; fixed css

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
         </div>
         
     </header>
-    <div>
-        <span id="error"></span>
+    <div id="error">
     </div>
     <section id="cards">
         <div class="card" id="card-profile">
