- Rus. - Fix input label link.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 </script>
 <main>
     <header>
-        <h1 id="logo">KarmaScan</h1>
+        <h1 id="logo">Сканер лайрок</h1>
         <div id="search">
-            <label for="user_url" id="search-label">Ссылка на профиль:</label>
+            <label for="search-input" id="search-label">Ссылка на профиль:</label>
             <input id="search-input" name="user_url" type="text">
-            <input type="button" value="Scan" id="search-button">
+            <input type="button" value="Сканировать" id="search-button">
         </div>
         <div id="urls">
         <a class="url-image" target="_blank" href="https://github.com/Suvitruf/cmtt-comments-likes-stats"><img src="public/images/GitHub-Mark-Light-32px.png" alt="github icon"></a>
