Small changes: - css formating. - Shadows. - Fixed top blocks width.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </script>
 <main>
     <header>
-        <h1 id="logo">Сканер лайрок</h1>
+        <h1 id="logo">Сканер лайков</h1>
         <div id="search">
             <label for="search-input" id="search-label">Ссылка на профиль:</label>
             <input id="search-input" name="user_url" type="text">
@@ -49,14 +49,14 @@
         <a class="url-image" id="paypal-logo" target="_blank" href="https://www.paypal.com/paypalme/suvitruf" ><img src="public/images/Paypal_rs.png" alt="paypal icon" ></a>
         <a class="url-image" target="_blank" href="https://yoomoney.ru/to/41001674710054"><img src="public/images/io_rs.png" alt="yumani icon" ></a>
         </div>
-        
+
     </header>
     <div id="error">
     </div>
     <section id="cards">
         <div class="card" id="card-profile">
                 <div class="profile-ava">
-                    <img id="profile-ava" src="public/images/ava_palceholder.png">
+                    <img id="profile-ava" src="public/images/ava_palceholder.png"/>
                 </div>
                 <div class="profile-info">
                     <a id="profile-name" class="profile-datum">
@@ -83,15 +83,15 @@
         <div class="card" id="card-progress">
             <div class="card-bar">
             <div class="card-comments-container">
-                <div class="card-comments-progress-counted-block">
+                <div class="card-comments-progress-counted-block card-info-block">
                     <div class="stat-label">Всего</div>
                     <div id="card-comments-progress-total">0</div>
                 </div>
-                <div class="card-comments-progress-total-block">
+                <div class="card-comments-progress-total-block card-info-block">
                     <div class="stat-label">Обработано</div>
                     <div id="card-comments-progress-counted">0</div>
                 </div>
-                <div class="card-comments-progress-time-block">
+                <div class="card-comments-progress-time-block card-info-block">
                     <div class="stat-label">Осталось</div>
                     <div id="card-comments-progress-time">🤔</div>
                 </div>
@@ -102,15 +102,15 @@
             </div>
             <div class="card-bar">
             <div class="card-likes-container">
-                <div class="card-likes-progress-likes-block">
+                <div class="card-likes-progress-likes-block card-info-block">
                     <div class="stat-label">Плюсов</div>
                     <div id="card-likes-progress-likes">0</div>
                 </div>
-                <div class="card-likes-progress-dislikes-block">
+                <div class="card-likes-progress-dislikes-block card-info-block">
                     <div class="stat-label">Минусов</div>
                     <div id="card-likes-progress-dislikes">0</div>
                 </div>
-                <div class="card-likes-progress-total-block">
+                <div class="card-likes-progress-total-block card-info-block">
                     <div class="stat-label">Всего</div>
                     <div id="card-likes-progress-total">0</div>
                 </div>
