Add alt attr for image.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="cards">
         <div class="card" id="card-profile">
                 <div class="profile-ava">
-                    <img id="profile-ava" src="public/images/ava_placeholder.png"/>
+                    <img id="profile-ava" alt="Avatar placeholder" src="public/images/ava_placeholder.png"/>
                 </div>
                 <div class="profile-info">
                     <a id="profile-name" class="profile-datum">
