Changes api version, fixex all related problems. For now, at least, likes counting works.

--- a/index.html
+++ b/index.html
@@ -39,17 +39,23 @@
     <header>
         <h1 id="logo">Сканер лайков</h1>
         <div id="search">
-            <label for="search-input" id="search-label">Ссылка на профиль:</label>
-            <input id="search-input" name="user_url" type="text">
+            <div>
+                <label for="search-input" class="search-label">Ссылка на профиль:</label>
+                <input id="search-input" name="user_url" type="text">
+            </div>
+<!--            <div>-->
+<!--                <label for="search-cookie" class="search-label">Куки:</label>-->
+<!--                <input id="search-cookie" name="cookie_value" type="text">-->
+<!--            </div>-->
             <input type="button" value="Сканировать" id="search-button">
         </div>
         <div id="urls">
-        <a class="url-image" target="_blank" href="https://github.com/Suvitruf/cmtt-comments-likes-stats"><img src="public/images/GitHub-Mark-Light-32px.png" alt="github icon"></a>
-        <a class="url-image" target="_blank" href="https://www.patreon.com/suvitruf"><img src="public/images/Patreon_rs.png" alt="patreon icon"></a>
-        <a class="url-image" id="paypal-logo" target="_blank" href="https://www.paypal.com/paypalme/suvitruf" ><img src="public/images/Paypal_rs.png" alt="paypal icon" ></a>
-        <a class="url-image" target="_blank" href="https://yoomoney.ru/to/41001674710054"><img src="public/images/io_rs.png" alt="yumani icon" ></a>
+            <a class="url-image" target="_blank" href="https://github.com/Suvitruf/cmtt-comments-likes-stats"><img src="public/images/GitHub-Mark-Light-32px.png" alt="github icon"></a>
+            <a class="url-image" target="_blank" href="https://boosty.to/apanasik"><img src="public/images/boosty.png" alt="boosty icon"></a>
+            <a class="url-image" target="_blank" href="https://www.patreon.com/suvitruf"><img src="public/images/Patreon_rs.png" alt="patreon icon"></a>
+            <a class="url-image" id="paypal-logo" target="_blank" href="https://www.paypal.com/paypalme/andreiapanasik" ><img src="public/images/Paypal_rs.png" alt="paypal icon" ></a>
+            <a class="url-image" target="_blank" href="https://yoomoney.ru/to/41001674710054"><img src="public/images/io_rs.png" alt="yumani icon" ></a>
         </div>
-
     </header>
     <div id="error">
     </div>
@@ -130,7 +136,8 @@
             </div>
         <div class="block-dislikers block">
             <header class="block-header">
-                Топ хейтеров 😞
+                Топ хейтеров 😞</br>
+                Больше не работает. Скажите спасибо Комитету.
             </header>
             <div id="dislikers-list">
             </div>
